--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 10px;
+}
+
 .dashboard-buttons{
   display: flex;
   padding: 10 px;
@@ -7,7 +13,7 @@
 }
 
 .dashboard-container{
-  max-width: 600px;
+  max-width: 500px;
   margin: 0 auto;
   border-radius: 4px;
   border: solid lightgray;
@@ -37,4 +43,156 @@
   max-width: 1000px;
   margin: 0 auto;
   padding: 10px;
+}
+
+.active {
+  font-weight: bold;
+  background-color: rgb(63, 176, 221);
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: solid rgb(63, 176, 221);
+  margin-bottom: 20px;
+  height: 55px;
+}
+
+.nav-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  text-decoration: none;
+}
+
+.nav li:first-child {
+  padding-left: 0;
+}
+
+ul {
+  padding-left: 0;
+}
+
+li {
+  list-style-type: none;
+  padding: 10px;
+  text-decoration: none;
+}
+
+
+.avatar-thumb {
+  height: 20px;
+  width: 20px;
+  border-radius: 25px;
+  padding-left: 3px;
+}
+
+.avatar {
+  height: 170px;
+  border-radius: 25px;
+  margin: 10px;
+  margin-left: 20px;
+}
+
+.nav-greating{
+  display: flex;
+}
+
+.nav-list li a{
+  list-style-type: none;
+  padding: 10px;
+  text-decoration: none;
+  color: black;
+}
+
+.poll-heading{
+  background-color: lightgrey;
+  font-weight: bolder;
+  /* height: 20px; */
+  padding: 15px;
+  margin: 0;
+}
+
+.poll-container{
+  border-radius: 4px;
+  border: solid lightgray;
+  height: 240px;
+}
+
+.poll-details{
+  display: flex;
+}
+
+.poll-option{
+  padding-left: 10px;
+}
+
+.poll-data{
+  padding: 0 20px;
+  width: 100%;
+}
+
+
+
+.center{
+  text-align: center;
+}
+
+.poll-link{
+  text-decoration: none;
+  color: lightgreen;
+
+}
+
+.poll-view{
+  width: 200px;
+  text-align: center;
+  border: solid lightgreen;
+  border-radius: 10px;
+  margin-left: 10px;
+}
+
+.answered-poll-container{
+  max-width: 500px;
+  margin: 0 auto;
+  border-radius: 4px;
+  border: solid lightgray;
+  height: 400px;
+}
+
+.avatar-answered{
+  height: 170px;
+  border-radius: 25px;
+  margin: 90px 20px;
+}
+
+.answer-yes{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border : solid darkgreen;
+  border-radius: 8px;
+  background-color: lightgreen;
+}
+
+.answer-no{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: solid lightgray;
+  border-radius: 8px;
+  background-color: #eeeeee;
+}
+
+.your-vote{
+  font-size: 12px;
+  width: 40px;
+
+  margin: 5px;
+  background-color: goldenrod;
+  text-align: center;
+  border-radius: 20px;
+}
+
+.answer-yes .poll-option{
 }
