--- a/src/index.css
+++ b/src/index.css
@@ -125,6 +125,7 @@ li {
 
 .poll-option{
   padding-left: 10px;
+  font-weight:bolder;
 }
 
 .poll-data{
@@ -157,7 +158,7 @@ li {
   margin: 0 auto;
   border-radius: 4px;
   border: solid lightgray;
-  height: 400px;
+  height: 450px;
 }
 
 .avatar-answered{
@@ -168,31 +169,44 @@ li {
 
 .answer-yes{
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-around;
   border : solid darkgreen;
   border-radius: 8px;
   background-color: lightgreen;
+  margin-bottom: 20px;
+  min-height: 140px;
 }
 
 .answer-no{
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-around;
   border: solid lightgray;
   border-radius: 8px;
-  background-color: #eeeeee;
+  background-color: #f9f9f9;
+  margin-bottom: 20px;
+  min-height: 130px;
 }
 
-.your-vote{
+.your-vote {
   font-size: 12px;
-  width: 40px;
-
+  min-width: 15%;
+  max-width: 15%;
   margin: 5px;
   background-color: goldenrod;
   text-align: center;
-  border-radius: 20px;
+  border-radius: 200px;
+  padding-top: 6px;
+  height: 35px;
 }
 
-.answer-yes .poll-option{
+.poll-data1{
+  display: flex;
+  justify-content: space-between;
+}
+
+.votes{
+  align-self: center;
+  font-weight: bolder;
 }
